# MuonBDTPid

./: .gitignore  AddUboostBranchRun2.cpp  Makefile  README.md  flake.nix  requirements.txt  samples.json  shell.nix
castelao/Rec/ChargedProtoANNPIDLight/: CMakeLists.txt
castelao/Rec/ChargedProtoANNPIDLight/src/: ChargedProtoANNPIDCommonBase.h  ChargedProtoANNPIDCommonBase.icpp  ChargedProtoANNPIDConstructors.cpp  ChargedProtoANNPIDLightTupleTool.cpp  ChargedProtoANNPIDLightTupleTool.h  ChargedProtoANNPIDToolBase.cpp  ChargedProtoANNPIDToolBase.h
conds/: cond-2015.py
nix/: overlay.nix
nix/AddUBDTBranch/: default.nix
nix/addUBDTBranch/: default.nix
nix/overlay/root5/: default.nix  sw_vers_root5.patch  uboost.patch
nix/root5/: default.nix  uboost.patch
run2-pid/: reco_pp.py  run.sh
run2-pid/conds/: cond-pid-2015-lxplus.py  cond-pid-2015.py
run2-pid/data/data-2015-mu/: 00050412_00000001_4.fullturbo.dst  00050412_00000002_4.fullturbo.dst  (+4 more)
samples/: Jpsi--21_02_05--pidcalib--data_turbo--2016--mu--Mu_nopt-subset.root  Jpsi--21_11_30--pidcalib--data_turbo--2016--mu--Mu_nopt-subset.root  sample_pidcalib_file_list.json
scripts/: apply_ubdt.py  hash_checker.py  json_writer.py  merge_ntuple.py  nix_tester.py  ntuple_grabber.py  plot_ubdt_input_br_old_vs_new.py  plot_ubdt_input_brs.py  sha_checker.py
spec/: pidcalib-2016.yml  pidcalib.yml  pidcalib17.yml  pidcalib17.yml~  pidcalib18.yml  pidcalib18.yml~
src/: AddUBDTBranchRun2.cpp  Makefile  addUBDTBranchRun2.cpp  addUBDTBranchRun2_pid_sample.cpp
test/: bkgd.root  signal.root  uBoostEval.C  uBoostEval.cxx  uBoostTrain.C  uBoostTrain.cpp  uBoostTrain.cxx
(+6 files in other folders)
